# my_pkg

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  changelog.html  conduct.html  contributing.html  docker-entrypoint.sh  example.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sonar-project.properties
.github/: renovate.json
.github/workflows/: close-stale-issues.yml  continuous-deployment.yml  continuous-integration.yml  docker-image-build.yml
_modules/: index.html
_modules/my_pkg/: my_pkg.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/my_pkg/: index.rst.txt
_sources/autoapi/my_pkg/__main__/: index.rst.txt
_sources/autoapi/my_pkg/my_pkg/: index.rst.txt
autoapi/: index.html
autoapi/my_pkg/: index.html
autoapi/my_pkg/__main__/: index.html
autoapi/my_pkg/my_pkg/: index.html
docs/: Makefile  conf.py  example.ipynb  make.bat
src/my_pkg/: __init__.py  __main__.py  my_pkg.py
tests/: test_my_pkg.py
